<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="app_name">漫品</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="bottom_sheet_behavior">android.support.design.widget.BottomSheetBehavior</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="default_web_client_id">879297176765-ibsshmk3pvgor4857l7jilfl31ejvfee.apps.googleusercontent.com</string>
    <string name="fab_transformation_scrim_behavior">android.support.design.widget.transformation.FabTransformationScrimBehavior</string>
    <string name="fab_transformation_sheet_behavior">android.support.design.widget.transformation.FabTransformationSheetBehavior</string>
    <string name="firebase_database_url">https://storyboard-726d1.firebaseio.com</string>
    <string name="gcm_defaultSenderId">879297176765</string>
    <string name="generating_comic">Generating a comic</string>
    <string name="google_api_key">AIzaSyDhec0AGnVQXnVQr8gIXMavO6JyRkovETo</string>
    <string name="google_app_id">1:879297176765:android:14741e11efec3adc</string>
    <string name="google_crash_reporting_api_key">AIzaSyDhec0AGnVQXnVQr8gIXMavO6JyRkovETo</string>
    <string name="google_storage_bucket">storyboard-726d1.appspot.com</string>
    <string name="hide_bottom_view_on_scroll_behavior">android.support.design.widget.HideBottomViewOnScrollBehavior</string>
    <string name="instruction_load_video">视频一键转动画</string>
    <string name="loading_video">视频加载中...</string>
    <string name="analysis_video">视频解析中...</string>
    <string name="menu_load_video">加载视频</string>
    <string name="menu_save">保存在本地</string>
    <string name="menu_share">分享</string>
    <string name="open_menu">Tap to open menu</string>
    <string name="password_toggle_content_description">Toggle password visibility</string>
    <string name="path_password_eye">M12,4.5C7,4.5 2.73,7.61 1,12c1.73,4.39 6,7.5 11,7.5s9.27,-3.11 11,-7.5c-1.73,-4.39 -6,-7.5 -11,-7.5zM12,17c-2.76,0 -5,-2.24 -5,-5s2.24,-5 5,-5 5,2.24 5,5 -2.24,5 -5,5zM12,9c-1.66,0 -3,1.34 -3,3s1.34,3 3,3 3,-1.34 3,-3 -1.34,-3 -3,-3z</string>
    <string name="path_password_eye_mask_strike_through">M2,4.27 L19.73,22 L22.27,19.46 L4.54,1.73 L4.54,1 L23,1 L23,23 L1,23 L1,4.27 Z</string>
    <string name="path_password_eye_mask_visible">M2,4.27 L2,4.27 L4.54,1.73 L4.54,1.73 L4.54,1 L23,1 L23,23 L1,23 L1,4.27 Z</string>
    <string name="path_password_strike_through">M3.27,4.27 L19.74,20.74</string>
    <string name="preferences_license_title">Open source licenses</string>
    <string name="search_menu_title">Search</string>
    <string name="splash_name">加载视频,转换漫画</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="toast_pull_down">下拉刷新图像</string>
    <string name="toast_tap">点击图片获取菜单</string>
    <string name="edit_card_et_hint">编辑内容(48字以内)</string>
    <string name="edit_card_keyboard_to">TO</string>
    <string name="edit_card_keyboard_by">BY</string>
    <string name="edit_card_keyboard_date">修改日期</string>
    <string name="edit_card_keyboard_picture">更换照片</string>
    <string name="edit_card_keyboard_template">更换模板</string>


    <string name="net_error_10001">没有网络</string>
    <string name="net_error_10002">网络连接超时</string>
    <string name="net_error_10003">数据解析失败</string>

    <string name="tv_read_durprogress">观看至:%s</string>
    <string name="tv_book_name">《%s》</string>
    <string name="tv_searchbook_lastest">最新章节:%s</string>
    <string name="tv_pop_checkaddshelf">是否将《%s》放入书架？</string>
    <string name="tv_importbook_count">共%s个Text文件</string>


    <string name="privacy_exit">暂不使用</string>
    <string name="privacy_agree">同意</string>
    <string name="users_note">服务协议和隐私政策</string>
    <string name="privacy_tips_key1">《用户协议》</string>
    <string name="privacy_tips_key2">《隐私政策》</string>
    <string name="privacy_tips">欢迎使用漫品客户端！请您务必审慎阅读,充分理解"服务协议"和"隐私政策"各条款,包括但不限于:为了向你提供及时分享服务和制作漫画需要的视频资源,我们需要收集你的设备信息,操作日志,地理位置信息等。你可以在"设置"中查看,变更,删除个人信息并管理你的授权.
        \n你可阅读《用户协议》和《隐私政策》了解详细信息。隐私政策和用户协议内容如你同意,请点击"同意"开始接受我们的服务。</string>

    <string name="confirmed">用户须知已确认</string>
    <string name="opt_terms">用户协议</string>
    <string name="opt_privacy">隐私政策</string>
    <string name="so_load_check_str">视频转漫画基于3D神经网络转换,首次使用需要下载必要组件,大小为30M左右,是否确认下载?</string>
    <string name="so_load_faid">必要组件下载或安装失败,请点击重试.如有问题请清空缓存后重试</string>
</resources>
