<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#88000000"
    android:fitsSystemWindows="false"
    android:orientation="horizontal"
    android:weightSum="3.0">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="center"
        android:layout_weight="1.0"
        android:background="@drawable/shape"
        android:orientation="vertical">

        <Space
            android:layout_width="fill_parent"
            android:layout_height="15.0dip"
            android:layout_weight="1.0" />

        <LinearLayout
            android:id="@+id/import_row"
            android:layout_width="fill_parent"
            android:layout_height="60.0dip"
            android:background="@android:color/white"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1.0"
                android:src="@drawable/bt_import" />

            <TextView
                android:layout_width="175.0dip"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1.0"
                android:ems="10"
                android:text="@string/menu_load_video"
                android:textColor="#ff757575"
                android:textSize="21.0dip" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/save_row"
            android:layout_width="fill_parent"
            android:layout_height="60.0dip"
            android:background="@android:color/white"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1.0"
                android:src="@drawable/bt_save" />

            <TextView
                android:layout_width="175.0dip"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1.0"
                android:ems="10"
                android:text="@string/menu_save"
                android:textColor="#ff757575"
                android:textSize="21.0dip" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/share_row"
            android:layout_width="fill_parent"
            android:layout_height="60.0dip"
            android:background="@android:color/white"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1.0"
                android:src="@drawable/bt_share" />

            <TextView
                android:layout_width="175.0dip"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1.0"
                android:ems="10"
                android:text="@string/menu_share"
                android:textColor="#ff757575"
                android:textSize="21.0dip" />
        </LinearLayout>

        <Space
            android:layout_width="fill_parent"
            android:layout_height="10.0dip"
            android:layout_weight="1.0" />
    </LinearLayout>
</LinearLayout>